# chaosvector-audio

./: .gitignore  CLAUDE.md  README.md  UPSTREAM-CHANGES.md  config.yaml  pyproject.toml
model/: hey_jarvis_livekit.onnx
scripts/: force-ec-source-default.sh
src/chaosvector_audio/: __init__.py  __main__.py  aec.py  capture.py  context.py  family_knowledge.py  feedback.py  ha.py  health.py  http_api.py  llm.py  main.py  orchestrator.py  pipeline.py  playback.py  sounds.py  speaker.py  stt.py  stt_fast.py  stt_filters.py  stt_streaming.py  tts.py  tts_cache.py  vad.py  wake.py  wake_livekit.py  wake_shadow.py  wake_verify.py
systemd/: chaosvector-audio.logrotate  chaosvector-audio.service  livekit-wakeword.service  wyoming-openwakeword.service
tests/: phase1_proof.py  phase2_proof.py  phase3_proof.py  phase4_proof.py
tools/: record_tv_negatives.py  record_wake_words.py
