[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chaosvector-audio"
version = "0.1.0"
description = "Unified audio pipeline daemon — capture, playback, AEC, and voice routing for Pi-Fi speaker"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Miles Eckman" },
]

dependencies = [
    "numpy>=1.26",
    "sounddevice>=0.4",
    "PyYAML>=6",
    "aiohttp>=3",
]

[project.optional-dependencies]
aec = [
    "webrtcvad>=2.0.10",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
chaosvector-audio = "chaosvector_audio.__main__:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
